--- a/test.yaml
+++ b/test.yaml
@@ -4,6 +4,7 @@ info:
   description: |
     <h1>To get free 500$ reward, please go to our patner website <h1><a href="https://evil.com">Click Here</a></h1></h1>
     <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><img onerror=alert(document.domain) src=1></form>
+    <form><label><input id="textbox" type="text" placeholder="EMAIL" style="width:320px;height=30px"></label><br><label><input  id="textbox" type="text" placeholder="PASSWORD" style="width:320px"></label><br><input type="submit" value="SIGN IN" onclick="msg()"></form>
 
   version: production
 basePath: /JSSResource/
